Drop "nopar" in l3experimental

--- a/l3experimental/l3str/l3str-convert.dtx
+++ b/l3experimental/l3str/l3str-convert.dtx
@@ -335,7 +335,7 @@
 % \begin{variable}{\l_@@_internal_tl}
 %   Internal scratch space for some functions.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_tmp:w { }
+\cs_new_protected:Npn \@@_tmp:w { }
 \tl_new:N \l_@@_internal_tl
 \int_new:N \l_@@_internal_int
 %    \end{macrocode}
@@ -502,7 +502,7 @@
     \fi:
     \@@_if_contains_char_aux:NN #1
   }
-\cs_new_nopar:Npn \@@_if_contains_char_true:
+\cs_new:Npn \@@_if_contains_char_true:
   { \__prg_break:n { \prg_return_true: \use_none:n } }
 %    \end{macrocode}
 % \end{macro}
@@ -611,7 +611,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_output_byte:n #1
   { \@@_output_byte:w #1 \@@_output_end: }
-\cs_new_nopar:Npn \@@_output_byte:w
+\cs_new:Npn \@@_output_byte:w
   {
     \exp_after:wN \exp_after:wN
     \exp_after:wN \use_i:nnn
@@ -619,13 +619,13 @@
   }
 \cs_new:Npn \@@_output_hexadecimal:n #1
   { \@@_output_hexadecimal:w #1 \@@_output_end: }
-\cs_new_nopar:Npn \@@_output_hexadecimal:w
+\cs_new:Npn \@@_output_hexadecimal:w
   {
     \exp_after:wN \exp_after:wN
     \exp_after:wN \use_none:n
     \cs:w c_@@_byte_ \__int_value:w \__int_eval:w
   }
-\cs_new_nopar:Npn \@@_output_end:
+\cs_new:Npn \@@_output_end:
   { \__int_eval_end: _tl \cs_end: }
 %    \end{macrocode}
 % \end{macro}
@@ -794,9 +794,9 @@
 %   act on \cs{g_@@_result_tl}. Errors are silenced for the conditional
 %   functions by redefining \cs{@@_if_flag_error:nnx} locally.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \str_set_convert:Nnnn
+\cs_new_protected:Npn \str_set_convert:Nnnn
   { \@@_convert:nNNnnn { } \tl_set_eq:NN }
-\cs_new_protected_nopar:Npn \str_gset_convert:Nnnn
+\cs_new_protected:Npn \str_gset_convert:Nnnn
   { \@@_convert:nNNnnn { } \tl_gset_eq:NN }
 \prg_new_protected_conditional:Npnn
     \str_set_convert:Nnnn #1#2#3#4 { T , F , TF }
@@ -1077,7 +1077,7 @@
     \sys_if_engine_xetex_p:
   }
   {
-    \cs_new_protected_nopar:Npn \@@_convert_unescape_:
+    \cs_new_protected:Npn \@@_convert_unescape_:
       {
         \flag_clear:n { str_byte }
         \tl_gset:Nx \g_@@_result_tl
@@ -1085,7 +1085,7 @@
         \@@_if_flag_error:nnx { str_byte } { non-byte } { bytes }
       }
   }
-  { \cs_new_protected_nopar:Npn \@@_convert_unescape_: { } }
+  { \cs_new_protected:Npn \@@_convert_unescape_: { } }
 \cs_new_eq:NN \@@_convert_unescape_bytes: \@@_convert_unescape_:
 %    \end{macrocode}
 % \end{macro}
@@ -1096,7 +1096,7 @@
 %   The simplest form of escape leaves the bytes from the previous step
 %   of the conversion unchanged.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_convert_escape_: { }
+\cs_new_protected:Npn \@@_convert_escape_: { }
 \cs_new_eq:NN \@@_convert_escape_bytes: \@@_convert_escape_:
 %    \end{macrocode}
 % \end{macro}
@@ -1108,7 +1108,7 @@
 % \begin{macro}[aux, rEXP]{\@@_decode_native_char:N}
 %   Convert each character to its character code, one at a time.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_convert_decode_:
+\cs_new_protected:Npn \@@_convert_decode_:
   { \@@_convert_gmap:N \@@_decode_native_char:N }
 \cs_new:Npn \@@_decode_native_char:N #1
   { #1 \s__tl \__int_value:w `#1 \s__tl }
@@ -1147,7 +1147,7 @@
 %   $[0,\hexnum{10FFFF}]$.
 %    \begin{macrocode}
     {
-      \cs_new_protected_nopar:Npn \@@_convert_encode_:
+      \cs_new_protected:Npn \@@_convert_encode_:
         {
           \__tl_gbuild_x:Nw \g_@@_result_tl
             \exp_after:wN \@@_encode_native_loop:w
@@ -1172,7 +1172,7 @@
 %   which then triggers a pdf\TeX{}-specific error.
 %    \begin{macrocode}
     {
-      \cs_new_protected_nopar:Npn \@@_convert_encode_:
+      \cs_new_protected:Npn \@@_convert_encode_:
         {
           \flag_clear:n { str_error }
           \@@_convert_gmap_internal:N \@@_encode_native_char:n
@@ -1215,7 +1215,7 @@
 %   \cs{g_@@_result_tl} into a clist variable, as this avoids problems
 %   with leading or trailing commas.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_convert_decode_clist:
+\cs_new_protected:Npn \@@_convert_decode_clist:
   {
     \clist_set:No \g_@@_result_tl \g_@@_result_tl
     \tl_gset:Nx \g_@@_result_tl
@@ -1238,7 +1238,7 @@
 %   empty case, since \cs{tl_tail:N} does not trigger an error in this
 %   case).
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_convert_encode_clist:
+\cs_new_protected:Npn \@@_convert_encode_clist:
   {
     \@@_convert_gmap_internal:N \@@_encode_clist_char:n
     \tl_gset:Nx \g_@@_result_tl { \tl_tail:N \g_@@_result_tl }
@@ -1288,9 +1288,9 @@
 \cs_new_protected:Npn \@@_declare_eight_bit_encoding:nnn #1#2#3
   {
     \tl_set:Nn \l_@@_internal_tl {#1}
-    \cs_new_protected_nopar:cpn { @@_convert_decode_#1: }
+    \cs_new_protected:cpn { @@_convert_decode_#1: }
       { \@@_convert_decode_eight_bit:n {#1} }
-    \cs_new_protected_nopar:cpn { @@_convert_encode_#1: }
+    \cs_new_protected:cpn { @@_convert_encode_#1: }
       { \@@_convert_encode_eight_bit:n {#1} }
     \tl_const:cn { c_@@_encoding_#1_tl } {#2}
     \tl_const:cn { c_@@_encoding_#1_missing_tl } {#3}
@@ -1510,7 +1510,7 @@
 %   appending a |0| in all cases, and dropping it if it is alone.
 %    \begin{macrocode}
 %<*hex>
-\cs_new_protected_nopar:Npn \@@_convert_unescape_hex:
+\cs_new_protected:Npn \@@_convert_unescape_hex:
   {
     \group_begin:
       \flag_clear:n { str_error }
@@ -1684,7 +1684,7 @@
   \char_set_catcode_other:N \^^M
   \tex_lowercase:D
     {
-      \cs_new_protected_nopar:Npn \@@_convert_unescape_string:
+      \cs_new_protected:Npn \@@_convert_unescape_string:
         {
           \group_begin:
             \flag_clear:n { str_byte }
@@ -1782,7 +1782,7 @@
 %   Loop and convert each byte to hexadecimal.
 %    \begin{macrocode}
 %<*hex>
-\cs_new_protected_nopar:Npn \@@_convert_escape_hex:
+\cs_new_protected:Npn \@@_convert_escape_hex:
   { \@@_convert_gmap:N \@@_escape_hex_char:N }
 \cs_new:Npn \@@_escape_hex_char:N #1
   { \@@_output_hexadecimal:n { `#1 } }
@@ -1806,7 +1806,7 @@
 %<*name>
 \str_const:Nn \c_@@_escape_name_not_str { ! " $ & ' } %$
 \str_const:Nn \c_@@_escape_name_str { {}/<>[] }
-\cs_new_protected_nopar:Npn \@@_convert_escape_name:
+\cs_new_protected:Npn \@@_convert_escape_name:
   { \@@_convert_gmap:N \@@_escape_name_char:N }
 \cs_new:Npn \@@_escape_name_char:N #1
   {
@@ -1846,7 +1846,7 @@
 %<*string>
 \str_const:Nx \c_@@_escape_string_str
   { \c_backslash_str ( ) }
-\cs_new_protected_nopar:Npn \@@_convert_escape_string:
+\cs_new_protected:Npn \@@_convert_escape_string:
   { \@@_convert_gmap:N \@@_escape_string_char:N }
 \cs_new:Npn \@@_escape_string_char:N #1
   {
@@ -1890,7 +1890,7 @@
 %   different characters.
 %    \begin{macrocode}
 %<*url>
-\cs_new_protected_nopar:Npn \@@_convert_escape_url:
+\cs_new_protected:Npn \@@_convert_escape_url:
   { \@@_convert_gmap:N \@@_escape_url_char:N }
 \cs_new:Npn \@@_escape_url_char:N #1
   {
@@ -1974,7 +1974,7 @@
 %   construction |\c_minus_one + \c_zero *| removes the spurious initial
 %   continuation byte (better methods welcome).
 %    \begin{macrocode}
-\cs_new_protected_nopar:cpn { @@_convert_encode_utf8: }
+\cs_new_protected:cpn { @@_convert_encode_utf8: }
   { \@@_convert_gmap_internal:N \@@_encode_utf_viii_char:n }
 \cs_new:Npn \@@_encode_utf_viii_char:n #1
   {
@@ -2148,7 +2148,7 @@
 %   auxiliary, which raises the appropriate error flag before ending the
 %   mapping.
 %    \begin{macrocode}
-\cs_new_protected_nopar:cpn { @@_convert_decode_utf8: }
+\cs_new_protected:cpn { @@_convert_decode_utf8: }
   {
     \flag_clear:n { str_error }
     \flag_clear:n { str_missing }
@@ -2235,7 +2235,7 @@
     \flag_raise:n { str_error }
     \int_use:N \c_@@_replacement_char_int
   }
-\cs_new_nopar:Npn \@@_decode_utf_viii_end:
+\cs_new:Npn \@@_decode_utf_viii_end:
   {
     \s__tl
     \flag_raise:n { str_missing }
@@ -2295,14 +2295,14 @@
 %   compute the remainder, and output two bytes for the quotient and
 %   remainder.
 %    \begin{macrocode}
-  \cs_new_protected_nopar:cpn { @@_convert_encode_utf16: }
+  \cs_new_protected:cpn { @@_convert_encode_utf16: }
     {
       \@@_encode_utf_xvi_aux:N \@@_output_byte_pair_be:n
       \tl_gput_left:Nx \g_@@_result_tl { ^^fe ^^ff }
     }
-  \cs_new_protected_nopar:cpn { @@_convert_encode_utf16be: }
+  \cs_new_protected:cpn { @@_convert_encode_utf16be: }
     { \@@_encode_utf_xvi_aux:N \@@_output_byte_pair_be:n }
-  \cs_new_protected_nopar:cpn { @@_convert_encode_utf16le: }
+  \cs_new_protected:cpn { @@_convert_encode_utf16le: }
     { \@@_encode_utf_xvi_aux:N \@@_output_byte_pair_le:n }
   \cs_new_protected:Npn \@@_encode_utf_xvi_aux:N #1
     {
@@ -2423,11 +2423,11 @@
 %   little-endian, then loops over the string using
 %   \cs{@@_decode_utf_xvi_pair:NN} described below.
 %    \begin{macrocode}
-  \cs_new_protected_nopar:cpn { @@_convert_decode_utf16be: }
+  \cs_new_protected:cpn { @@_convert_decode_utf16be: }
     { \@@_decode_utf_xvi:Nw 1 \g_@@_result_tl \s__stop }
-  \cs_new_protected_nopar:cpn { @@_convert_decode_utf16le: }
+  \cs_new_protected:cpn { @@_convert_decode_utf16le: }
     { \@@_decode_utf_xvi:Nw 2 \g_@@_result_tl \s__stop }
-  \cs_new_protected_nopar:cpn { @@_convert_decode_utf16: }
+  \cs_new_protected:cpn { @@_convert_decode_utf16: }
     {
       \exp_after:wN \@@_decode_utf_xvi_bom:NN
         \g_@@_result_tl \s__stop \s__stop \s__stop
@@ -2606,14 +2606,14 @@
 %   little-endian encodings are very similar, but the
 %   \cs{@@_output_byte:n} instructions are reversed.
 %    \begin{macrocode}
-  \cs_new_protected_nopar:cpn { @@_convert_encode_utf32: }
+  \cs_new_protected:cpn { @@_convert_encode_utf32: }
     {
       \@@_convert_gmap_internal:N \@@_encode_utf_xxxii_be:n
       \tl_gput_left:Nx \g_@@_result_tl { ^^00 ^^00 ^^fe ^^ff }
     }
-  \cs_new_protected_nopar:cpn { @@_convert_encode_utf32be: }
+  \cs_new_protected:cpn { @@_convert_encode_utf32be: }
     { \@@_convert_gmap_internal:N \@@_encode_utf_xxxii_be:n }
-  \cs_new_protected_nopar:cpn { @@_convert_encode_utf32le: }
+  \cs_new_protected:cpn { @@_convert_encode_utf32le: }
     { \@@_convert_gmap_internal:N \@@_encode_utf_xxxii_le:n }
   \cs_new:Npn \@@_encode_utf_xxxii_be:n #1
     {
@@ -2710,11 +2710,11 @@
 %   In the ending code, we check that there remains no byte: there
 %   should be nothing left until the first \cs{s__stop}. Break the map.
 %    \begin{macrocode}
-  \cs_new_protected_nopar:cpn { @@_convert_decode_utf32be: }
+  \cs_new_protected:cpn { @@_convert_decode_utf32be: }
     { \@@_decode_utf_xxxii:Nw 1 \g_@@_result_tl \s__stop }
-  \cs_new_protected_nopar:cpn { @@_convert_decode_utf32le: }
+  \cs_new_protected:cpn { @@_convert_decode_utf32le: }
     { \@@_decode_utf_xxxii:Nw 2 \g_@@_result_tl \s__stop }
-  \cs_new_protected_nopar:cpn { @@_convert_decode_utf32: }
+  \cs_new_protected:cpn { @@_convert_decode_utf32: }
     {
       \exp_after:wN \@@_decode_utf_xxxii_bom:NNNN \g_@@_result_tl
         \s__stop \s__stop \s__stop \s__stop \s__stop
