--- a/l3experimental/l3str/l3str-format.dtx
+++ b/l3experimental/l3str/l3str-format.dtx
@@ -448,7 +448,7 @@
 %   Call \cs{@@_tl:NNNnnNn} to read the parsed \meta{format
 %     specification}.  Then convert the result to a string.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \tl_format:Nn { \exp_args:No \tl_format:nn }
+\cs_new:Npn \tl_format:Nn { \exp_args:No \tl_format:nn }
 \cs_generate_variant:Nn \tl_format:Nn { c }
 \cs_new:Npn \tl_format:nn #1#2
   {
