--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -1278,7 +1278,7 @@
 %   The meaning of the token \cs{par} itself starts off as a standard
 %   paragraph.
 %    \begin{macrocode}
-\cs_set_protected_nopar:Npn \par { \galley_par: }
+\cs_set_protected:Npn \par { \galley_par: }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2499,7 +2499,7 @@
 %   structures rather than directly onto the main vertical list. Other
 %   than that it is the same as the \LaTeXe{} version.
 %    \begin{macrocode}
-\cs_set_nopar:Npn \clearpage
+\cs_set:Npn \clearpage
   {
     \mode_if_vertical:T
       {
@@ -2521,7 +2521,7 @@
 % In package mode, some of \LaTeXe{}'s functions are re-implemented using
 % the galley system. Not all of the optional arguments currently work!
 %    \begin{macrocode}
-\cs_set_nopar:Npn \nobreak
+\cs_set_protected:Npn \nobreak
   { \bool_gset_true:N \g_galley_no_break_next_bool }
 %    \end{macrocode}
 %  The \tn{noindent} primitive will causes problems, as it is used by
@@ -2530,7 +2530,7 @@
 %  need leave vertical mode, at the moment we stick with the primitive as
 %  well as setting the galley flag.
 %    \begin{macrocode}
-\cs_set_protected_nopar:Npn \noindent
+\cs_set_protected_protected:Npn \noindent
   {
     \tex_noindent:D
     \bool_gset_false:N \g_galley_omit_next_indent_bool
@@ -2593,15 +2593,15 @@
 % \begin{macro}{\addpenalty, \addvspace}
 %   The mechanism here is entirely different, but at least this works!
 %    \begin{macrocode}
-\cs_set_nopar:Npn \addpenalty { \galley_penalty_add_single:n }
-\cs_set_nopar:Npn \addvspace  { \galley_vspace_max_single:n }
+\cs_set_protected:Npn \addpenalty { \galley_penalty_add_single:n }
+\cs_set_protected:Npn \addvspace  { \galley_vspace_max_single:n }
 %    \end{macrocode}
 %\end{macro}
 %
 % \begin{macro}{\@afterheading}
 %   Set some flags and hope for the best!
 %    \begin{macrocode}
-\cs_set_nopar:Npn \@afterheading
+\cs_set_protected:Npn \@afterheading
   {
     \bool_gset_true:N \g_galley_no_break_next_bool
     \if@afterindent
@@ -2617,7 +2617,7 @@
 %   shape is set in a different way. As a result, the label is part of the
 %   same paragraph as the main body, hence the need to leave vertical mode.
 %    \begin{macrocode}
-\cs_set:Npn \@hangfrom #1
+\cs_set_protected:Npn \@hangfrom #1
   {
     \bool_gset_true:N \g_galley_omit_next_indent_bool
     \leavevmode
