One nopar mistake

--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -2530,7 +2530,7 @@
 %  need leave vertical mode, at the moment we stick with the primitive as
 %  well as setting the galley flag.
 %    \begin{macrocode}
-\cs_set_protected_protected:Npn \noindent
+\cs_set_protected:Npn \noindent
   {
     \tex_noindent:D
     \bool_gset_false:N \g_galley_omit_next_indent_bool
