Remove nopar from l3trial
There is one use retained as it is a low-level operation.

--- a/l3trial/l3hooks/l3hooks.dtx
+++ b/l3trial/l3hooks/l3hooks.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3hooks.dtx Copyright (C) 2011,2012,2014 The LaTeX3 Project
+%% File l3hooks.dtx Copyright (C) 2011,2012,2014,2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -200,7 +200,7 @@
 %     by \cs{hook_use:n}.
 %   \end{itemize}
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \hook_new:n #1
+\cs_new_protected:Npn \hook_new:n #1
   {
     \tl_new:c   { g_hook_kernel_ #1 _tl }
     \tl_gset:cx { g_hook_kernel_ #1 _tl }
@@ -215,7 +215,7 @@
 %   \cs{hook_use:N} with the \meta{hook} built
 %   from the given \meta{hook name}.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \hook_use:n #1
+\cs_new_protected:Npn \hook_use:n #1
   {
     \cs_if_exist_use:cF { g_hook_kernel_ #1 _tl }
       { \msg_error:nnx { hook } { use-unknown-hook } {#1} }
@@ -232,7 +232,7 @@
 %   Actually, the \cs{hook_item:n} and \cs{hook_item_once:n} are just
 %   distinct dummy functions which both behave like \cs{exp_not:n}.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \hook_use:N #1
+\cs_new_protected:Npn \hook_use:N #1
   {
     \use:x
       {
@@ -262,13 +262,13 @@
 %   reliable since you never know when a dastardly package author overrides
 %   anything you might do with |\everyxyz|.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \hook_pre_push:nn
+\cs_new_protected:Npn \hook_pre_push:nn
   { \hook_put_aux:NNnn \seq_gput_left:cn \hook_item:n }
-\cs_new_protected_nopar:Npn \hook_post_push:nn
+\cs_new_protected:Npn \hook_post_push:nn
   { \hook_put_aux:NNnn \seq_gput_right:cn \hook_item:n }
-\cs_new_protected_nopar:Npn \hook_pre_once:nn
+\cs_new_protected:Npn \hook_pre_once:nn
   { \hook_put_aux:NNnn \seq_gput_left:cn \hook_item_once:n }
-\cs_new_protected_nopar:Npn \hook_post_once:nn
+\cs_new_protected:Npn \hook_post_once:nn
   { \hook_put_aux:NNnn \seq_gput_right:cn \hook_item_once:n }
 \cs_new_protected:Npn \hook_put_aux:NNnn #1#2#3#4
   {
@@ -315,7 +315,7 @@
 %   the interface \cs{every\meta{name>}}|={...}| by defining each of those
 %   control sequences as toks registers.
 %    \begin{macrocode}
-  \cs_set_protected_nopar:Npn \hook_new:nNN #1#2#3
+  \cs_set_protected:Npn \hook_new:nNN #1#2#3
     {
       \hook_new:n {#1}
 %<*package>
@@ -364,7 +364,7 @@
 %   \cs{tex_everycr:D}, which has no reason to be unpacked within
 %   an \texttt{x}-type argument.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \hook_cr_use:N #1
+\cs_new_protected:Npn \hook_cr_use:N #1
   {
     \tex_noalign:D \c_group_begin_token
     \use:x
