--- a/l3trial/l3ldb/l3ldbparse.dtx
+++ b/l3trial/l3ldb/l3ldbparse.dtx
@@ -1,7 +1,7 @@
 % \iffalse meta-comment
 %
 %% File l3ldbparse.dtx (C) Copyright 2011 Frank Mittelbach, The LaTeX3 Project
-%%                     (C) Copyright 2012 The LaTeX3 Project
+%%                     (C) Copyright 2012,2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -123,9 +123,9 @@
 %    Very convenient abbreviations for defining a continuation in
 %    |\gtmp:w| for immediate use.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \glet_gtmp:N { \cs_gset_eq:NN \gtmp:w }
-\cs_new_protected_nopar:Npn \gdef_gtmp:n { \cs_gset:Npn   \gtmp:w }
-\cs_new_protected_nopar:Npn \gdef_gtmp:x { \cs_gset:Npx   \gtmp:w }
+\cs_new_protected:Npn \glet_gtmp:N { \cs_gset_eq:NN \gtmp:w }
+\cs_new_protected:Npn \gdef_gtmp:n { \cs_gset:Npn   \gtmp:w }
+\cs_new_protected:Npn \gdef_gtmp:x { \cs_gset:Npx   \gtmp:w }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -256,7 +256,7 @@
 %   Defines \cs{gtmp:w} as a continuation that invokes the error
 %   handler.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \ldb_gtmp_error: { \glet_gtmp:N \ldb_error:w }
+\cs_new_protected:Npn \ldb_gtmp_error: { \glet_gtmp:N \ldb_error:w }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -272,7 +272,7 @@
 %   Otherwise, we flush the pending triple and remove the \cs{q_error}
 %   token.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \ldb_parse_finish:
+\cs_new_protected:Npn \ldb_parse_finish:
   {
     \if_case:w \g_ldb_mode
       \glet_gtmp:N \ldb_parse_done:w
@@ -290,7 +290,7 @@
 % \begin{macro}{\ldb_parse_done:w}
 %   Removes the \cs{q_error} token when parsing successfully completes.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \ldb_parse_done:w \q_error { }
+\cs_new_protected:Npn \ldb_parse_done:w \q_error { }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -317,7 +317,7 @@
 %   occurrence of |AA\q_stop| and leave the second occurrence as
 %   trailing garbage).
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \ldb_expand_it:w { }
+\cs_new_protected:Npn \ldb_expand_it:w { }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -441,8 +441,8 @@
 % \begin{macro}{\ldb_push_dot:, \ldb_push_star:}
 %    Record a tight or a loose binding.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \ldb_push_dot:  { \ldb_push_bdg:N \c_one }
-\cs_new_protected_nopar:Npn \ldb_push_star: { \ldb_push_bdg:N \c_two }
+\cs_new_protected:Npn \ldb_push_dot:  { \ldb_push_bdg:N \c_one }
+\cs_new_protected:Npn \ldb_push_star: { \ldb_push_bdg:N \c_two }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -456,7 +456,7 @@
 %   \cs{g_ldb_bdg} to~0 (sequencing: no intervening binding was found),
 %   and \cs{g_ldb_mode} to~2 (we just found |<|).
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \ldb_push_begin:
+\cs_new_protected:Npn \ldb_push_begin:
   {
     \if_int_compare:w \g_ldb_mode = \c_two
       \ldb_gtmp_error:
@@ -507,7 +507,7 @@
 %   end tag.  Finally we flush the pending triple and reset
 %   \cs{g_ldb_type}, \cs{g_ldb_bdg} and \cs{g_ldb_mode} to~0.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \ldb_push_end:
+\cs_new_protected:Npn \ldb_push_end:
   {
     \if_int_compare:w \g_ldb_mode < \c_three
       \ldb_gtmp_error:
@@ -530,7 +530,7 @@
 %   update the values of \cs{g_ldb_type}, \cs{g_ldb_bdg} and
 %   \cs{g_ldb_mode}.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \ldb_flush:NNN
+\cs_new_protected:Npn \ldb_flush:NNN
   {
 %    \end{macrocode}
 %   First, we select the appropriate handler according to whether we are
@@ -578,7 +578,7 @@
 %   less efficient since every numerical test would have to expand
 %   \cs{g_ldb_bdg_tl}.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \ldb_push:
+\cs_new_protected:Npn \ldb_push:
   {
     \tl_gput_right:Nx \g_ldb_triples_tl
       {
@@ -612,7 +612,7 @@
 %   \emph{i.e.}  segment~4.  If we are already in segment~4, that's
 %   where we stay.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \ldb_push_begin_tag:
+\cs_new_protected:Npn \ldb_push_begin_tag:
   {
     \if_int_compare:w \g_ldb_segment<\c_three
       \cs_gset_eq:NN \g_ldb_segment \c_one
@@ -639,7 +639,7 @@
 %   |<->| is illegal.  Otherwise, we simply update \cs{g_ldb_segment}
 %   to~2 to indicate that we are now right after a completed tag.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \ldb_push_compl_tag:
+\cs_new_protected:Npn \ldb_push_compl_tag:
   {
     \if_int_compare:w \g_ldb_segment > \c_two
       \ldb_gtmp_error:
@@ -668,7 +668,7 @@
 %   allowed, and if we are in the begin sequence, only begin tags are
 %   allowed.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \ldb_push_end_tag:
+\cs_new_protected:Npn \ldb_push_end_tag:
   {
     \gdef_gtmp:n { \cs_gset_eq:NN \g_ldb_segment \c_three }
     \if_case:w\g_ldb_segment
