--- a/l3trial/l3trace/l3trace.dtx
+++ b/l3trial/l3trace/l3trace.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3trace.dtx (C) Copyright 2012 The LaTeX3 Project
+%% File l3trace.dtx (C) Copyright 2012,2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -252,7 +252,7 @@
 %    In case we want to show the content of some sequence we locally redefine
 %    their data structures (may have to be done for other types as well).
 %    \begin{macrocode}
-\cs_new_nopar:Npn \trace_display:x #1
+\cs_new:Npn \trace_display:x #1
   {
     \__seq_push_item_def:n { ##1 \space }
     \typeout
@@ -272,7 +272,7 @@
 %  \begin{macro}{\traceonly}
 %    Tracing only some (at the moment exactly one) function and its subcomponents.
 %    \begin{macrocode}
- % \cs_new_nopar:Npn \traceonly #1
+ % \cs_new:Npn \traceonly #1
  %   {
  %     \notrace
  %     \tl_set:Nn \l_trace_only_tl {#1}
@@ -284,7 +284,7 @@
 %    rubbish ... the idea should be to allow for recursive entering the same
 %    function  ... fix some other time :-) }
 %    \begin{macrocode}
-     % \cs_gset_nopar:Npn \trace_push:n ##1
+     % \cs_gset:Npn \trace_push:n ##1
      %   {
      %     \tl_set:Nn \l_trace_this_only_tl {##1}
      %     \token_if_eq_meaning:NNT
@@ -299,7 +299,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-   %   \cs_set_nopar:Npn \trace_pop:n ##1
+   %   \cs_set:Npn \trace_pop:n ##1
    %     {
    %       \trace:n {leaving~##1}
    %       \tl_gset:Nx \g_trace_prefix_tl { \tl_tail:N \g_trace_prefix_tl }
@@ -407,7 +407,7 @@
 % \begin{macro}{\trace_show_marks:}
 %    Show the current meaning of the different marks on the page.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \trace_show_marks:
+\cs_new_protected:Npn \trace_show_marks:
   {
     \__msg_show_pre:nnnnnn { trace } { show-marks } { } { } { } { }
     \__msg_show_wrap:n
