--- a/l3trial/l3tree/l3tree.dtx
+++ b/l3trial/l3tree/l3tree.dtx
@@ -284,9 +284,9 @@
 %   result sequence into the user's variable, and clear the
 %   internal sequence (a small cost operation to avoid memory leaks).
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \seq_set_from_tree:NN
+\cs_new_protected:Npn \seq_set_from_tree:NN
   { \tree_extract_aux:NNN \seq_set_eq:NN }
-\cs_new_protected_nopar:Npn \seq_gset_from_tree:NN
+\cs_new_protected:Npn \seq_gset_from_tree:NN
   { \tree_extract_aux:NNN \seq_gset_eq:NN }
 \cs_new_protected:Npn \tree_extract_aux:NNN #1#2#3
   {
