--- a/l3trial/l3benchmark/l3benchmark.dtx
+++ b/l3trial/l3benchmark/l3benchmark.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3benchmark.dtx Copyright (C) 2011,2012,2014 The LaTeX3 Project
+%% File l3benchmark.dtx Copyright (C) 2011,2012,2014,2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -175,7 +175,7 @@
         \msg_error:nn { benchmark } { no-time }
         \int_zero:N #1
       }
-    \cs_new_protected_nopar:Npn \clock_zero:
+    \cs_new_protected:Npn \clock_zero:
       { \msg_error:nn { benchmark } { no-time } }
     \cs_new_protected:Npn \benchmark:n #1
       {
@@ -236,8 +236,8 @@
 \sys_if_engine_xetex:F
   {
     \sys_if_engine_pdftex:TF
-      { \cs_new_protected_nopar:Npn \clock_zero: { \pdfresettimer } }
-      { \cs_new_protected_nopar:Npn \clock_zero: { \pdf@resettimer } }
+      { \cs_new_protected:Npn \clock_zero: { \pdfresettimer } }
+      { \cs_new_protected:Npn \clock_zero: { \pdf@resettimer } }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -312,7 +312,7 @@
 \sys_if_engine_xetex:T
   {
     \fp_new:N \g_@@_base_fp
-    \cs_new_protected_nopar:Npn \clock_zero:
+    \cs_new_protected:Npn \clock_zero:
       { \@@_gget:N \g_@@_base_fp }
   }
 %    \end{macrocode}
@@ -393,7 +393,7 @@
     \@@_outer_do_nothing:
     \clock_get:N \l_@@_time_b_tl
   }
-\tex_outer:D \cs_set_nopar:Npn \@@_outer_do_nothing: { }
+\tex_outer:D \cs_set:Npn \@@_outer_do_nothing: { }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
