--- a/l3trial/l3check/l3check.dtx
+++ b/l3trial/l3check/l3check.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3check.dtx (C) Copyright 2012,2014-2015 The LaTeX3 Project
+%% File l3check.dtx (C) Copyright 2012,2014-2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -322,17 +322,17 @@
 % \begin{macro}[EXP]{\@@_error_exp:nn, \@@_error_exp:nnn, \@@_error_exp:nnnn}
 %   Wrappers around errors, expandable or not.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \@@_error:nn
+\cs_new:Npn \@@_error:nn
   { \msg_error:nnn { check } }
-\cs_new_nopar:Npn \@@_error:nnn
+\cs_new:Npn \@@_error:nnn
   { \msg_error:nnnn { check } }
-\cs_new_nopar:Npn \@@_error:nnnn
+\cs_new:Npn \@@_error:nnnn
   { \msg_error:nnnnn { check } }
-\cs_new_nopar:Npn \@@_error_exp:nn
+\cs_new:Npn \@@_error_exp:nn
   { \msg_expandable_error:nnn { check } }
-\cs_new_nopar:Npn \@@_error_exp:nnn
+\cs_new:Npn \@@_error_exp:nnn
   { \msg_expandable_error:nnnn { check } }
-\cs_new_nopar:Npn \@@_error_exp:nnnn
+\cs_new:Npn \@@_error_exp:nnnn
   { \msg_expandable_error:nnnnn { check } }
 %    \end{macrocode}
 % \end{macro}
@@ -342,18 +342,18 @@
 % \begin{macro}[EXP]{\@@_warning_exp:nn, \@@_warning_exp:nnn}
 %   A wrapper around warnings, expandable or not.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \@@_warning:nn
+\cs_new:Npn \@@_warning:nn
   { \msg_warning:nnn { check } }
-\cs_new_nopar:Npn \@@_warning:nnn
+\cs_new:Npn \@@_warning:nnn
   { \msg_warning:nnnn { check } }
-\cs_new_nopar:Npn \@@_warning_exp:nn
+\cs_new:Npn \@@_warning_exp:nn
   {
     \@@_old_cs_if_exist:NTF \msg_expandable_warning:nnn
       { \msg_expandable_warning:nnn }
       { \msg_expandable_error:nnn }
         { check }
   }
-\cs_new_nopar:Npn \@@_warning_exp:nnn
+\cs_new:Npn \@@_warning_exp:nnn
   {
     \@@_old_cs_if_exist:NTF \msg_expandable_warning:nnnn
       { \msg_expandable_warning:nnnn }
@@ -566,7 +566,7 @@
   }
 \cs_new_protected:Npn \@@_module_first_use:n #1
   {
-    \cs_gset_protected_nopar:cpx { @@_module_#1:N }
+    \cs_gset_protected:cpx { @@_module_#1:N }
       { \exp_not:N \cs_set_eq:NN \exp_not:c { @@_return_#1: } }
     \cs_new_eq:cN { @@_return_#1: } \prg_return_false:
     \cs_set_eq:cN { @@_return_#1: } \prg_return_true:
@@ -744,7 +744,7 @@
 \cs_new_protected:Npn \@@_omit_aux:NNN #1#2#3
   {
     \cs_gset_eq:NN #1 #2
-    \cs_gset_protected_nopar:Npn #2
+    \cs_gset_protected:Npn #2
       { \cs_gset_eq:NN #2 #1 #3 }
   }
 %    \end{macrocode}
@@ -828,13 +828,13 @@
 % \begin{macro}{\check_is_local_variable:N}
 % \begin{macro}[EXP]{\check_is_local_variable_exp:N}
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \check_is_local_variable:N
+\cs_new_protected:Npn \check_is_local_variable:N
   { \@@_is_scope_variable:NNN l \@@_error:nnn }
-\cs_new_protected_nopar:Npn \check_is_global_variable:N
+\cs_new_protected:Npn \check_is_global_variable:N
   { \@@_is_scope_variable:NNN g \@@_error:nnn }
-\cs_new_nopar:Npn \check_is_local_variable_exp:N
+\cs_new:Npn \check_is_local_variable_exp:N
   { \@@_is_scope_variable:NNN l \@@_error_exp:nnn }
-\cs_new_nopar:Npn \check_is_global_variable_exp:N
+\cs_new:Npn \check_is_global_variable_exp:N
   { \@@_is_scope_variable:NNN g \@@_error_exp:nnn }
 \cs_new:Npn \@@_is_scope_variable:NNN #1#2#3
   {
@@ -1115,9 +1115,9 @@
     LaTeX~will~create~the~variable~and~continue.
   }
 \msg_new:nnn { check } { par-noarg }
-  { The~function~'#1'~takes~no~argument~but~is~not~defined~to~be~"_nopar".~This~is~unusual. }
+  { The~function~'#1'~takes~no~argument~but~is~not~defined~to~be~"".~This~is~unusual. }
 \msg_new:nnn { check } { arg-nopar }
-  { The~function~'#1'~is~"_nopar"~but~takes~arguments.~This~is~risky. }
+  { The~function~'#1'~is~""~but~takes~arguments.~This~is~risky. }
 \msg_new:nnn { check } { set-eq-undef }
   { The~function~'#1'~was~set~equal~to~'#2',~but~that~is~not~defined. }
 \msg_new:nnn { check } { no-expansion }
@@ -1151,27 +1151,27 @@
 %    \end{macrocode}
 %
 % First standardize some definitions: the $16$ assignment functions
-% |\cs_(set/gset/new)(/_protected)(/_nopar):Np(n/x)| are normally
+% |\cs_(set/gset/new)(/_protected)(/):Np(n/x)| are normally
 % defined in terms of each other, but that complicates checking, since
 % some are defined as \cs{tex_long:D} or \cs{etex_protected:D} followed
 % by others.
 %    \begin{macrocode}
-    \cs_gset_protected_nopar:Npn \cs_set_nopar:Npn { \tex_def:D }
-    \cs_gset_protected_nopar:Npn \cs_set_nopar:Npx { \tex_edef:D }
-    \cs_gset_protected_nopar:Npn \cs_gset_nopar:Npn { \tex_gdef:D }
-    \cs_gset_protected_nopar:Npn \cs_gset_nopar:Npx { \tex_xdef:D }
-    \cs_gset_protected_nopar:Npn \cs_set:Npn { \tex_long:D \tex_def:D }
-    \cs_gset_protected_nopar:Npn \cs_set:Npx { \tex_long:D \tex_edef:D }
-    \cs_gset_protected_nopar:Npn \cs_gset:Npn { \tex_long:D \tex_gdef:D }
-    \cs_gset_protected_nopar:Npn \cs_gset:Npx { \tex_long:D \tex_xdef:D }
-    \cs_gset_protected_nopar:Npn \cs_set_protected_nopar:Npn { \etex_protected:D \tex_def:D }
-    \cs_gset_protected_nopar:Npn \cs_set_protected_nopar:Npx { \etex_protected:D \tex_edef:D }
-    \cs_gset_protected_nopar:Npn \cs_gset_protected_nopar:Npn { \etex_protected:D \tex_gdef:D }
-    \cs_gset_protected_nopar:Npn \cs_gset_protected_nopar:Npx { \etex_protected:D \tex_xdef:D }
-    \cs_gset_protected_nopar:Npn \cs_set_protected:Npn { \etex_protected:D \tex_long:D \tex_def:D }
-    \cs_gset_protected_nopar:Npn \cs_set_protected:Npx { \etex_protected:D \tex_long:D \tex_edef:D }
-    \cs_gset_protected_nopar:Npn \cs_gset_protected:Npn { \etex_protected:D \tex_long:D \tex_gdef:D }
-    \cs_gset_protected_nopar:Npn \cs_gset_protected:Npx { \etex_protected:D \tex_long:D \tex_xdef:D }
+    \cs_gset_protected:Npn \cs_set:Npn { \tex_def:D }
+    \cs_gset_protected:Npn \cs_set:Npx { \tex_edef:D }
+    \cs_gset_protected:Npn \cs_gset:Npn { \tex_gdef:D }
+    \cs_gset_protected:Npn \cs_gset:Npx { \tex_xdef:D }
+    \cs_gset_protected:Npn \cs_set:Npn { \tex_long:D \tex_def:D }
+    \cs_gset_protected:Npn \cs_set:Npx { \tex_long:D \tex_edef:D }
+    \cs_gset_protected:Npn \cs_gset:Npn { \tex_long:D \tex_gdef:D }
+    \cs_gset_protected:Npn \cs_gset:Npx { \tex_long:D \tex_xdef:D }
+    \cs_gset_protected:Npn \cs_set_protected:Npn { \etex_protected:D \tex_def:D }
+    \cs_gset_protected:Npn \cs_set_protected:Npx { \etex_protected:D \tex_edef:D }
+    \cs_gset_protected:Npn \cs_gset_protected:Npn { \etex_protected:D \tex_gdef:D }
+    \cs_gset_protected:Npn \cs_gset_protected:Npx { \etex_protected:D \tex_xdef:D }
+    \cs_gset_protected:Npn \cs_set_protected:Npn { \etex_protected:D \tex_long:D \tex_def:D }
+    \cs_gset_protected:Npn \cs_set_protected:Npx { \etex_protected:D \tex_long:D \tex_edef:D }
+    \cs_gset_protected:Npn \cs_gset_protected:Npn { \etex_protected:D \tex_long:D \tex_gdef:D }
+    \cs_gset_protected:Npn \cs_gset_protected:Npx { \etex_protected:D \tex_long:D \tex_xdef:D }
 %    \end{macrocode}
 % Simplify \cs{cs_gset_eq:NN} and \cs{cs_new_eq:NN} similarly rather
 % than defining them in terms of \cs{cs_set_eq:NN}
@@ -1183,7 +1183,7 @@
 % We could change \cs{group_begin:}, \cs{group_end:},
 % \cs{group_insert_after:N}, but do not.
 %
-% Let us do |\cs_(set/gset/new)(/_protected)(/_nopar):N(/p)(n/x)|, $48$
+% Let us do |\cs_(set/gset/new)(/_protected)(/):N(/p)(n/x)|, $48$
 % assignment functions.  For now, just check that the first argument is
 % a single token, is a function (not yet), and for the |:Nn|/|:Nx|
 % defining functions, check that the signature is right.  Additionally,
@@ -1215,7 +1215,7 @@
               % \check_is_function:N ##1
               \tl_if_empty:nT {##2} { \@@_warning:nn { par-noarg } {##1} }
             }
-          \check_patch:cpnn { cs_ #1 #2 _nopar:Np #3 }
+          \check_patch:cpnn { cs_ #1 #2 :Np #3 }
             ##1 ##2 ## { ##1 ##2 }
             {
               \check_is_N:n {##1}
@@ -1230,7 +1230,7 @@
               \check_signature_is_base:N ##1
               \check_signature_should_be_nonempty:N ##1
             }
-          \check_patch:cpnn { cs_ #1 #2 _nopar:N #3 }
+          \check_patch:cpnn { cs_ #1 #2 :N #3 }
             ##1 ##2 ## { ##1 ##2 }
             {
               \check_is_N:n {##1}
@@ -1368,18 +1368,18 @@
 %
 % When outputting a message, a function definition is made using
 % begin-group and end-group tokens which are spaces (character code
-% $32$), and that confuses the new \cs{cs_set_protected_nopar:Npn}.  To
+% $32$), and that confuses the new \cs{cs_set_protected:Npn}.  To
 % avoid this, go back temporarily to the old definition of that
 % function.
 %    \begin{macrocode}
-    \cs_new_eq:NN \@@_new_cs_set_protected_nopar:Npn \cs_set_protected_nopar:Npn
+    \cs_new_eq:NN \@@_new_cs_set_protected:Npn \cs_set_protected:Npn
     \use:x
       {
         \exp_not:n { \cs_gset_protected:Npn \__msg_interrupt_text:n #1 }
           {
-            \exp_not:n { \cs_set_eq:NN \cs_set_protected_nopar:Npn \@@_old_cs_set_protected_nopar:Npn }
+            \exp_not:n { \cs_set_eq:NN \cs_set_protected:Npn \@@_old_cs_set_protected:Npn }
             \exp_not:o { \__msg_interrupt_text:n {#1} }
-            \exp_not:n { \cs_set_eq:NN \cs_set_protected_nopar:Npn \@@_new_cs_set_protected_nopar:Npn }
+            \exp_not:n { \cs_set_eq:NN \cs_set_protected:Npn \@@_new_cs_set_protected:Npn }
           }
       }
 %    \end{macrocode}
@@ -1421,12 +1421,12 @@
 %     \cs_set_eq:cN, \cs_set_eq:Nc, \cs_set_eq:cc,
 %     \cs_gset_eq:cN, \cs_gset_eq:Nc, \cs_gset_eq:cc,
 %     \cs_new_eq:cN, \cs_new_eq:Nc, \cs_new_eq:cc,
-%     \cs_set:cpn, \cs_set_protected:cpn, \cs_set_nopar:cpn, \cs_set_protected_nopar:cpn,
-%     \cs_set:cpx, \cs_set_protected:cpx, \cs_set_nopar:cpx, \cs_set_protected_nopar:cpx,
-%     \cs_gset:cpn, \cs_gset_protected:cpn, \cs_gset_nopar:cpn, \cs_gset_protected_nopar:cpn,
-%     \cs_gset:cpx, \cs_gset_protected:cpx, \cs_gset_nopar:cpx, \cs_gset_protected_nopar:cpx,
-%     \cs_new:cpn, \cs_new_protected:cpn, \cs_new_nopar:cpn, \cs_new_protected_nopar:cpn,
-%     \cs_new:cpx, \cs_new_protected:cpx, \cs_new_nopar:cpx, \cs_new_protected_nopar:cpx,
+%     \cs_set:cpn, \cs_set_protected:cpn, \cs_set:cpn, \cs_set_protected:cpn,
+%     \cs_set:cpx, \cs_set_protected:cpx, \cs_set:cpx, \cs_set_protected:cpx,
+%     \cs_gset:cpn, \cs_gset_protected:cpn, \cs_gset:cpn, \cs_gset_protected:cpn,
+%     \cs_gset:cpx, \cs_gset_protected:cpx, \cs_gset:cpx, \cs_gset_protected:cpx,
+%     \cs_new:cpn, \cs_new_protected:cpn, \cs_new:cpn, \cs_new_protected:cpn,
+%     \cs_new:cpx, \cs_new_protected:cpx, \cs_new:cpx, \cs_new_protected:cpx,
 %     \tl_new:c, \tl_show:c, \tl_log:c, \tl_clear_new:c, \tl_gclear_new:c, \tl_const:cn, \tl_const:cx,
 %     \clist_new:c, \clist_show:c, \clist_log:c, \clist_clear_new:c, \clist_gclear_new:c, \clist_const:cn,
 %     \seq_new:c, \seq_show:c, \seq_log:c, \seq_clear_new:c, \seq_gclear_new:c,
@@ -1443,17 +1443,17 @@
 %    \begin{macrocode}
     \tl_map_inline:nn { {set} {gset} {new} }
       {
-        \cs_gset_protected_nopar:cpx { cs_#1_eq:cN }
+        \cs_gset_protected:cpx { cs_#1_eq:cN }
           {
             \exp_not:N \@@_old_exp_args:Nc
             \exp_not:c { cs_#1_eq:NN }
           }
-        \cs_gset_protected_nopar:cpx { cs_#1_eq:Nc }
+        \cs_gset_protected:cpx { cs_#1_eq:Nc }
           {
             \exp_not:N \@@_old_exp_args:NNc
             \exp_not:c { cs_#1_eq:NN }
           }
-        \cs_gset_protected_nopar:cpx { cs_#1_eq:cc }
+        \cs_gset_protected:cpx { cs_#1_eq:cc }
           {
             \exp_not:N \@@_old_exp_args:Ncc
             \exp_not:c { cs_#1_eq:NN }
@@ -1462,7 +1462,7 @@
     \group_begin:
       \cs_set_protected:Npn \check_tmp:w #1#2
         {
-          \exp_after:wN \cs_gset_protected_nopar:Npx \cs:w #1 : c #2 \cs_end:
+          \exp_after:wN \cs_gset_protected:Npx \cs:w #1 : c #2 \cs_end:
             {
               \exp_not:N \@@_old_exp_args:Nc
               \exp_not:c { #1 : N#2 }
@@ -1470,7 +1470,7 @@
         }
       \tl_map_inline:nn { {set} {gset} {new} }
         {
-          \tl_map_inline:nn { { } { _protected } { _nopar } { _protected_nopar } }
+          \tl_map_inline:nn { { } { _protected } {  } { _protected } }
             {
               \tl_map_inline:nn { n x }
                 { \check_tmp:w { cs_#1##1 } { p ####1 } }
@@ -1504,7 +1504,7 @@
 %   Remove fine-tuning.  Here \cs{use:N} does not exist so use
 %   \cs{use:n}.
 %    \begin{macrocode}
-    \cs_gset_nopar:Npn \use:c { \exp_args:Nc \use:n }
+    \cs_gset:Npn \use:c { \exp_args:Nc \use:n }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1528,41 +1528,41 @@
 %   because the |n| variant is a primitive, which does not
 %   accept unbraced arguments.
 %    \begin{macrocode}
-    \cs_gset_nopar:Npn \exp_not:o { \exp_args:No \exp_not:n }
-    \cs_gset_nopar:Npn \exp_not:c { \exp_args:Nc \exp_not:N }
-    \cs_gset_nopar:Npn \exp_not:f { \exp_args:Nf \exp_not:n }
-    \cs_gset_nopar:Npn \exp_not:V { \exp_args:NV \exp_not:n }
-    \cs_gset_nopar:Npn \exp_not:v { \exp_args:Nv \exp_not:n }
-    \cs_gset_nopar:Npn \exp_args:No { \::o \::: }
-    \cs_gset_nopar:Npn \exp_args:NNo { \::N \::o \::: }
-    \cs_gset_nopar:Npn \exp_args:NNNo { \::N \::N \::o \::: }
-    \cs_gset_nopar:Npn \exp_args:Nc { \::c \::: }
-    \cs_gset_nopar:Npn \exp_args:Ncc { \::c \::c \::: }
-    \cs_gset_nopar:Npn \exp_args:Nccc { \::c \::c \::c \::: }
-    \cs_gset_nopar:Npn \exp_args:NNc { \::N \::c \::: }
-    \cs_gset_nopar:Npn \exp_args:Nf { \::f \::: }
-    \cs_gset_nopar:Npn \exp_args:Nv { \::v \::: }
-    \cs_gset_nopar:Npn \exp_args:NV { \::V \::: }
-    \cs_gset_nopar:Npn \exp_args:NNf { \::N \::f \::: }
-    \cs_gset_nopar:Npn \exp_args:NNv { \::N \::v \::: }
-    \cs_gset_nopar:Npn \exp_args:NNV { \::N \::V \::: }
-    \cs_gset_nopar:Npn \exp_args:Nco { \::c \::o \::: }
-    \cs_gset_nopar:Npn \exp_args:Ncf { \::c \::f \::: }
-    \cs_gset_nopar:Npn \exp_args:NVV { \::V \::V \::: }
-    \cs_gset_nopar:Npn \exp_args:NNNV { \::N \::N \::V \::: }
-    \cs_gset_nopar:Npn \exp_args:NcNc { \::c \::N \::c \::: }
-    \cs_gset_nopar:Npn \exp_args:NcNo { \::c \::N \::o \::: }
-    \cs_gset_nopar:Npn \exp_args:Ncco { \::c \::c \::o \::: }
-    \cs_gset_nopar:Npn \exp_last_unbraced:NV { \::V_unbraced \::: }
-    \cs_gset_nopar:Npn \exp_last_unbraced:Nv { \::v_unbraced \::: }
-    \cs_gset_nopar:Npn \exp_last_unbraced:No { \::o_unbraced \::: }
-    \cs_gset_nopar:Npn \exp_last_unbraced:Nf { \::f_unbraced \::: }
-    \cs_gset_nopar:Npn \exp_last_unbraced:Nco { \::c \::o_unbraced \::: }
-    \cs_gset_nopar:Npn \exp_last_unbraced:NcV { \::c \::V_unbraced \::: }
-    \cs_gset_nopar:Npn \exp_last_unbraced:NNV { \::N \::V_unbraced \::: }
-    \cs_gset_nopar:Npn \exp_last_unbraced:NNo { \::N \::o_unbraced \::: }
-    \cs_gset_nopar:Npn \exp_last_unbraced:NNNV { \::N \::N \::V_unbraced \::: }
-    \cs_gset_nopar:Npn \exp_last_unbraced:NNNo { \::N \::N \::o_unbraced \::: }
+    \cs_gset:Npn \exp_not:o { \exp_args:No \exp_not:n }
+    \cs_gset:Npn \exp_not:c { \exp_args:Nc \exp_not:N }
+    \cs_gset:Npn \exp_not:f { \exp_args:Nf \exp_not:n }
+    \cs_gset:Npn \exp_not:V { \exp_args:NV \exp_not:n }
+    \cs_gset:Npn \exp_not:v { \exp_args:Nv \exp_not:n }
+    \cs_gset:Npn \exp_args:No { \::o \::: }
+    \cs_gset:Npn \exp_args:NNo { \::N \::o \::: }
+    \cs_gset:Npn \exp_args:NNNo { \::N \::N \::o \::: }
+    \cs_gset:Npn \exp_args:Nc { \::c \::: }
+    \cs_gset:Npn \exp_args:Ncc { \::c \::c \::: }
+    \cs_gset:Npn \exp_args:Nccc { \::c \::c \::c \::: }
+    \cs_gset:Npn \exp_args:NNc { \::N \::c \::: }
+    \cs_gset:Npn \exp_args:Nf { \::f \::: }
+    \cs_gset:Npn \exp_args:Nv { \::v \::: }
+    \cs_gset:Npn \exp_args:NV { \::V \::: }
+    \cs_gset:Npn \exp_args:NNf { \::N \::f \::: }
+    \cs_gset:Npn \exp_args:NNv { \::N \::v \::: }
+    \cs_gset:Npn \exp_args:NNV { \::N \::V \::: }
+    \cs_gset:Npn \exp_args:Nco { \::c \::o \::: }
+    \cs_gset:Npn \exp_args:Ncf { \::c \::f \::: }
+    \cs_gset:Npn \exp_args:NVV { \::V \::V \::: }
+    \cs_gset:Npn \exp_args:NNNV { \::N \::N \::V \::: }
+    \cs_gset:Npn \exp_args:NcNc { \::c \::N \::c \::: }
+    \cs_gset:Npn \exp_args:NcNo { \::c \::N \::o \::: }
+    \cs_gset:Npn \exp_args:Ncco { \::c \::c \::o \::: }
+    \cs_gset:Npn \exp_last_unbraced:NV { \::V_unbraced \::: }
+    \cs_gset:Npn \exp_last_unbraced:Nv { \::v_unbraced \::: }
+    \cs_gset:Npn \exp_last_unbraced:No { \::o_unbraced \::: }
+    \cs_gset:Npn \exp_last_unbraced:Nf { \::f_unbraced \::: }
+    \cs_gset:Npn \exp_last_unbraced:Nco { \::c \::o_unbraced \::: }
+    \cs_gset:Npn \exp_last_unbraced:NcV { \::c \::V_unbraced \::: }
+    \cs_gset:Npn \exp_last_unbraced:NNV { \::N \::V_unbraced \::: }
+    \cs_gset:Npn \exp_last_unbraced:NNo { \::N \::o_unbraced \::: }
+    \cs_gset:Npn \exp_last_unbraced:NNNV { \::N \::N \::V_unbraced \::: }
+    \cs_gset:Npn \exp_last_unbraced:NNNo { \::N \::N \::o_unbraced \::: }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1711,7 +1711,7 @@
                 {
                   \exp_not:n { \cs_set_eq:NN \exp_args:Nc \@@_old_exp_args:Nc }
                   \exp_not:o { \__char_set_catcode:Nn {#1} {#2} }
-                  \exp_not:n { \cs_set_nopar:Npn \exp_args:Nc { \::c \::: } }
+                  \exp_not:n { \cs_set:Npn \exp_args:Nc { \::c \::: } }
                 }
             }
         }
@@ -1938,17 +1938,17 @@
 %   }
 %   Redefine some functions as proper variants of their base functions.
 %    \begin{macrocode}
-    \cs_gset_protected_nopar:Npn \tl_set_eq:cN
+    \cs_gset_protected:Npn \tl_set_eq:cN
       { \exp_args:Nc \tl_set_eq:NN }
-    \cs_gset_protected_nopar:Npn \tl_set_eq:Nc
+    \cs_gset_protected:Npn \tl_set_eq:Nc
       { \exp_args:NNc \tl_set_eq:NN }
-    \cs_gset_protected_nopar:Npn \tl_set_eq:cc
+    \cs_gset_protected:Npn \tl_set_eq:cc
       { \exp_args:Ncc \tl_set_eq:NN }
-    \cs_gset_protected_nopar:Npn \tl_gset_eq:cN
+    \cs_gset_protected:Npn \tl_gset_eq:cN
       { \exp_args:Nc \tl_gset_eq:NN }
-    \cs_gset_protected_nopar:Npn \tl_gset_eq:Nc
+    \cs_gset_protected:Npn \tl_gset_eq:Nc
       { \exp_args:NNc \tl_gset_eq:NN }
-    \cs_gset_protected_nopar:Npn \tl_gset_eq:cc
+    \cs_gset_protected:Npn \tl_gset_eq:cc
       { \exp_args:Ncc \tl_gset_eq:NN }
 %    \end{macrocode}
 % \end{macro}
@@ -2266,27 +2266,27 @@
 %   Some functions should be redefined as true variants of their base
 %   function.
 %    \begin{macrocode}
-    \cs_gset_protected_nopar:Npn \seq_new:c
+    \cs_gset_protected:Npn \seq_new:c
       { \exp_args:Nc \seq_new:N }
-    \cs_gset_protected_nopar:Npn \seq_clear:c
+    \cs_gset_protected:Npn \seq_clear:c
       { \exp_args:Nc \seq_clear:N }
-    \cs_gset_protected_nopar:Npn \seq_gclear:c
+    \cs_gset_protected:Npn \seq_gclear:c
       { \exp_args:Nc \seq_gclear:N }
-    \cs_gset_protected_nopar:Npn \seq_clear_new:c
+    \cs_gset_protected:Npn \seq_clear_new:c
       { \exp_args:Nc \seq_clear_new:N }
-    \cs_gset_protected_nopar:Npn \seq_gclear_new:c
+    \cs_gset_protected:Npn \seq_gclear_new:c
       { \exp_args:Nc \seq_gclear_new:N }
-    \cs_gset_protected_nopar:Npn \seq_set_eq:cN
+    \cs_gset_protected:Npn \seq_set_eq:cN
       { \exp_args:Nc \seq_set_eq:NN }
-    \cs_gset_protected_nopar:Npn \seq_set_eq:Nc
+    \cs_gset_protected:Npn \seq_set_eq:Nc
       { \exp_args:NNc \seq_set_eq:NN }
-    \cs_gset_protected_nopar:Npn \seq_set_eq:cc
+    \cs_gset_protected:Npn \seq_set_eq:cc
       { \exp_args:Ncc \seq_set_eq:NN }
-    \cs_gset_protected_nopar:Npn \seq_gset_eq:cN
+    \cs_gset_protected:Npn \seq_gset_eq:cN
       { \exp_args:Nc \seq_gset_eq:NN }
-    \cs_gset_protected_nopar:Npn \seq_gset_eq:Nc
+    \cs_gset_protected:Npn \seq_gset_eq:Nc
       { \exp_args:NNc \seq_gset_eq:NN }
-    \cs_gset_protected_nopar:Npn \seq_gset_eq:cc
+    \cs_gset_protected:Npn \seq_gset_eq:cc
       { \exp_args:Ncc \seq_gset_eq:NN }
 %    \end{macrocode}
 % \end{macro}
@@ -2295,21 +2295,21 @@
 %   Expandable functions which should be redefined as true variants of
 %   their base function.
 %    \begin{macrocode}
-    \cs_gset_nopar:Npn \seq_if_empty:cTF
+    \cs_gset:Npn \seq_if_empty:cTF
       { \exp_args:Nc \seq_if_empty:NTF }
-    \cs_gset_nopar:Npn \seq_if_empty:cT
+    \cs_gset:Npn \seq_if_empty:cT
       { \exp_args:Nc \seq_if_empty:NT }
-    \cs_gset_nopar:Npn \seq_if_empty:cF
+    \cs_gset:Npn \seq_if_empty:cF
       { \exp_args:Nc \seq_if_empty:NF }
-    \cs_gset_nopar:Npn \seq_if_empty_p:c
+    \cs_gset:Npn \seq_if_empty_p:c
       { \exp_args:Nc \seq_if_empty_p:N }
-    \cs_gset_nopar:Npn \seq_if_exist:cTF
+    \cs_gset:Npn \seq_if_exist:cTF
       { \exp_args:Nc \seq_if_exist:NTF }
-    \cs_gset_nopar:Npn \seq_if_exist:cT
+    \cs_gset:Npn \seq_if_exist:cT
       { \exp_args:Nc \seq_if_exist:NT }
-    \cs_gset_nopar:Npn \seq_if_exist:cF
+    \cs_gset:Npn \seq_if_exist:cF
       { \exp_args:Nc \seq_if_exist:NF }
-    \cs_gset_nopar:Npn \seq_if_exist_p:c
+    \cs_gset:Npn \seq_if_exist_p:c
       { \exp_args:Nc \seq_if_exist_p:N }
 %    \end{macrocode}
 % \end{macro}
@@ -2362,13 +2362,13 @@
 %   We redefine those to use |\cs_| functions rather than |\tl_|
 %   functions.
 %    \begin{macrocode}
-    % \cs_gset_protected_nopar:Npn \seq_set_split:Nnn
-    %   { \__seq_set_split:NNnn \cs_set_nopar:Npx }
-    % \cs_gset_protected_nopar:Npn \seq_gset_split:Nnn
-    %   { \__seq_set_split:NNnn \cs_gset_nopar:Npx }
-    % \cs_gset_protected_nopar:Npn \seq_pop_left:NN
+    % \cs_gset_protected:Npn \seq_set_split:Nnn
+    %   { \__seq_set_split:NNnn \cs_set:Npx }
+    % \cs_gset_protected:Npn \seq_gset_split:Nnn
+    %   { \__seq_set_split:NNnn \cs_gset:Npx }
+    % \cs_gset_protected:Npn \seq_pop_left:NN
     %   { \__seq_pop:NNNN \__seq_pop_left:NNN \@@_tl_set:Nn }
-    % \cs_gset_protected_nopar:Npn \seq_gpop_left:NN
+    % \cs_gset_protected:Npn \seq_gpop_left:NN
     %   { \__seq_pop:NNNN \__seq_pop_left:NNN \@@_tl_gset:Nn }
     % \cs_gset_eq:NN \seq_pop:NN \seq_pop_left:NN
     % \cs_gset_eq:NN \seq_gpop:NN \seq_gpop_left:NN
