--- a/l3trial/l3ldb/l3ldb.dtx
+++ b/l3trial/l3ldb/l3ldb.dtx
@@ -1,7 +1,7 @@
 % \iffalse meta-comment
 %
 %% File l3ldb.dtx (C) Copyright 2011 Frank Mittelbach, the LaTeX3 Project
-%%                (C) Copyright 2012 The LaTeX3 Project
+%%                (C) Copyright 2012,2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -777,7 +777,7 @@
 % \begin{macro}{\ldb_update_end_single:N}
 %   Undoc
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \ldb_update_end_single:N
+\cs_new_protected:Npn \ldb_update_end_single:N
   { \ldb_update_single_aux:NN \ldb_update_emls:w }
 %    \end{macrocode}
 % \end{macro}
