--- a/l3trial/l3str-format-new/l3str-format-new.dtx
+++ b/l3trial/l3str-format-new/l3str-format-new.dtx
@@ -523,7 +523,7 @@
 % \begin{macro}[aux,EXP]{\@@_parse:n}
 %   This must be called within a \cs{@@_val_frame:n}
 %    \begin{macrocode}
-\cs_new_nopar:Npn \@@_parse:n
+\cs_new:Npn \@@_parse:n
   { \@@_keyval_parse:NNn \@@_key:n \@@_key:nn }
 %    \end{macrocode}
 % \end{macro}
@@ -666,7 +666,7 @@
 %   number of padding characters is odd, we add one more after than
 %   before.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \@@_align:n
+\cs_new:Npn \@@_align:n
   {
     \@@_val_do:nn { S }
       {
@@ -1149,7 +1149,7 @@
 %   Call \cs{@@_tl:NNNnnNn} to read the parsed \meta{format
 %     specification}.  Then convert the result to a string.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \tl_format:Nn { \exp_args:No \tl_format:nn }
+\cs_new:Npn \tl_format:Nn { \exp_args:No \tl_format:nn }
 \cs_generate_variant:Nn \tl_format:Nn { c }
 \cs_new:Npn \tl_format:nn #1#2
   {
