--- a/l3trial/xfont/l3font.dtx
+++ b/l3trial/xfont/l3font.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File: l3font.dtx Copyright (C) 2011,2012,2015 LaTeX3 project
+%% File: l3font.dtx Copyright (C) 2011,2012,2015,2016 LaTeX3 project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -323,7 +323,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \fontface_set:Nn #1#2
   { \tex_font:D #1 = #2 \scan_stop: }
-\cs_new_protected_nopar:Npn \fontface_gset:Nn
+\cs_new_protected:Npn \fontface_gset:Nn
   { \tex_global:D \fontface_set:Nn }
 \cs_generate_variant:Nn \fontface_set:Nn  {c}
 \cs_generate_variant:Nn \fontface_gset:Nn {c}
@@ -341,7 +341,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \fontface_set_at:Nnn #1#2#3
   { \tex_font:D #1 = #2 ~at~ #3 \scan_stop: }
-\cs_new_protected_nopar:Npn \fontface_gset_at:Nnn
+\cs_new_protected:Npn \fontface_gset_at:Nnn
   { \tex_global:D \fontface_set_at:Nnn }
 \cs_generate_variant:Nn \fontface_set_at:Nnn  {c}
 \cs_generate_variant:Nn \fontface_gset_at:Nnn {c}
@@ -352,7 +352,7 @@
 % \begin{macro}{\fontface_set_eq:NN,\fontface_gset_eq:NN}
 %    \begin{macrocode}
 \cs_set_eq:NN \fontface_set_eq:NN \cs_set_eq:NN
-\cs_set_protected_nopar:Npn \fontface_gset_eq:NN
+\cs_set_protected:Npn \fontface_gset_eq:NN
   { \tex_global:D \fontface_set_eq:NN }
 %    \end{macrocode}
 % \end{macro}
@@ -365,7 +365,7 @@
     \exp_after:wN #1
     \tex_the:D \tex_font:D
   }
-\cs_set_protected_nopar:Npn \fontface_gset_to_current:N
+\cs_set_protected:Npn \fontface_gset_to_current:N
   { \tex_global:D \fontface_set_eq:NN }
 %    \end{macrocode}
 % \end{macro}
@@ -375,8 +375,8 @@
 %   but they help to make some code clearer.
 %   Maybe the \cs{scan_stop:} is not useful.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \fontface_use:N #1 { #1 \scan_stop: }
-\cs_new_protected_nopar:Npn \fontface_use:c #1 { \use:c {#1} \scan_stop: }
+\cs_new_protected:Npn \fontface_use:N #1 { #1 \scan_stop: }
+\cs_new_protected:Npn \fontface_use:c #1 { \use:c {#1} \scan_stop: }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -385,7 +385,7 @@
 % \begin{macro}{\fontface_info:N,\fontface_current_info:}
 %    \begin{macrocode}
 \cs_set_eq:NN \fontface_info:N \tex_fontname:D
-\cs_set_nopar:Npn \fontface_current_info: { \fontface_info:N \tex_font:D }
+\cs_set:Npn \fontface_current_info: { \fontface_info:N \tex_font:D }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -411,19 +411,19 @@
 %               \fontface_current_xspace:       }
 % Accessing these registers is much more convenient by name than by number.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \fontface_current_slant:
+\cs_new_protected:Npn \fontface_current_slant:
   { \tex_fontdimen:D 1 \tex_font:D }
-\cs_new_protected_nopar:Npn \fontface_current_spaceskip:
+\cs_new_protected:Npn \fontface_current_spaceskip:
   { \tex_fontdimen:D 2 \tex_font:D }
-\cs_new_protected_nopar:Npn \fontface_current_space_stretch:
+\cs_new_protected:Npn \fontface_current_space_stretch:
   { \tex_fontdimen:D 3 \tex_font:D }
-\cs_new_protected_nopar:Npn \fontface_current_space_shrink:
+\cs_new_protected:Npn \fontface_current_space_shrink:
   { \tex_fontdimen:D 4 \tex_font:D }
-\cs_new_protected_nopar:Npn \fontface_current_xheight:
+\cs_new_protected:Npn \fontface_current_xheight:
   { \tex_fontdimen:D 5 \tex_font:D }
-\cs_new_protected_nopar:Npn \fontface_current_quad:
+\cs_new_protected:Npn \fontface_current_quad:
   { \tex_fontdimen:D 6 \tex_font:D }
-\cs_new_protected_nopar:Npn \fontface_current_xspace:
+\cs_new_protected:Npn \fontface_current_xspace:
   { \tex_fontdimen:D 7 \tex_font:D }
 %    \end{macrocode}
 % \end{macro}
@@ -519,7 +519,7 @@
   }
 \cs_new_protected:Npn \math_gset_accent:NNnn #1#2#3#4
   {
-    \cs_gset_protected_nopar:Npx #1
+    \cs_gset_protected:Npx #1
       {
         \tex_mathaccent:D "
           \math_class_to_int:N #2
@@ -570,7 +570,7 @@
   }
 \cs_new_protected:Npn \math_gset_delimiter:NNnnnn #1#2#3#4#5#6
   {
-    \cs_gset_protected_nopar:Npx #1
+    \cs_gset_protected:Npx #1
       {
         \tex_delimiter:D "
           \math_class_to_int:N #2
@@ -610,7 +610,7 @@
   }
 \cs_new_protected:Npn \math_gset_radical:Nnnnn #1#2#3#4#5
   {
-    \cs_gset_protected_nopar:Npx #1
+    \cs_gset_protected:Npx #1
       {
         \tex_radical:D "
           \int_to_Hex:n
