--- a/l3trial/l3check/l3check.dtx
+++ b/l3trial/l3check/l3check.dtx
@@ -1115,9 +1115,9 @@
     LaTeX~will~create~the~variable~and~continue.
   }
 \msg_new:nnn { check } { par-noarg }
-  { The~function~'#1'~takes~no~argument~but~is~not~defined~to~be~"".~This~is~unusual. }
+  { The~function~'#1'~takes~no~argument~but~is~not~defined~to~be~"_nopar".~This~is~unusual. }
 \msg_new:nnn { check } { arg-nopar }
-  { The~function~'#1'~is~""~but~takes~arguments.~This~is~risky. }
+  { The~function~'#1'~is~"_nopar"~but~takes~arguments.~This~is~risky. }
 \msg_new:nnn { check } { set-eq-undef }
   { The~function~'#1'~was~set~equal~to~'#2',~but~that~is~not~defined. }
 \msg_new:nnn { check } { no-expansion }
@@ -1151,23 +1151,23 @@
 %    \end{macrocode}
 %
 % First standardize some definitions: the $16$ assignment functions
-% |\cs_(set/gset/new)(/_protected)(/):Np(n/x)| are normally
+% |\cs_(set/gset/new)(/_protected)(/_nopar):Np(n/x)| are normally
 % defined in terms of each other, but that complicates checking, since
 % some are defined as \cs{tex_long:D} or \cs{etex_protected:D} followed
 % by others.
 %    \begin{macrocode}
-    \cs_gset_protected:Npn \cs_set:Npn { \tex_def:D }
-    \cs_gset_protected:Npn \cs_set:Npx { \tex_edef:D }
-    \cs_gset_protected:Npn \cs_gset:Npn { \tex_gdef:D }
-    \cs_gset_protected:Npn \cs_gset:Npx { \tex_xdef:D }
+    \cs_gset_protected:Npn \cs_set_nopar:Npn { \tex_def:D }
+    \cs_gset_protected:Npn \cs_set_nopar:Npx { \tex_edef:D }
+    \cs_gset_protected:Npn \cs_gset_nopar:Npn { \tex_gdef:D }
+    \cs_gset_protected:Npn \cs_gset_nopar:Npx { \tex_xdef:D }
     \cs_gset_protected:Npn \cs_set:Npn { \tex_long:D \tex_def:D }
     \cs_gset_protected:Npn \cs_set:Npx { \tex_long:D \tex_edef:D }
     \cs_gset_protected:Npn \cs_gset:Npn { \tex_long:D \tex_gdef:D }
     \cs_gset_protected:Npn \cs_gset:Npx { \tex_long:D \tex_xdef:D }
-    \cs_gset_protected:Npn \cs_set_protected:Npn { \etex_protected:D \tex_def:D }
-    \cs_gset_protected:Npn \cs_set_protected:Npx { \etex_protected:D \tex_edef:D }
-    \cs_gset_protected:Npn \cs_gset_protected:Npn { \etex_protected:D \tex_gdef:D }
-    \cs_gset_protected:Npn \cs_gset_protected:Npx { \etex_protected:D \tex_xdef:D }
+    \cs_gset_protected:Npn \cs_set_protected_nopar:Npn { \etex_protected:D \tex_def:D }
+    \cs_gset_protected:Npn \cs_set_protected_nopar:Npx { \etex_protected:D \tex_edef:D }
+    \cs_gset_protected:Npn \cs_gset_protected_nopar:Npn { \etex_protected:D \tex_gdef:D }
+    \cs_gset_protected:Npn \cs_gset_protected_nopar:Npx { \etex_protected:D \tex_xdef:D }
     \cs_gset_protected:Npn \cs_set_protected:Npn { \etex_protected:D \tex_long:D \tex_def:D }
     \cs_gset_protected:Npn \cs_set_protected:Npx { \etex_protected:D \tex_long:D \tex_edef:D }
     \cs_gset_protected:Npn \cs_gset_protected:Npn { \etex_protected:D \tex_long:D \tex_gdef:D }
@@ -1183,7 +1183,7 @@
 % We could change \cs{group_begin:}, \cs{group_end:},
 % \cs{group_insert_after:N}, but do not.
 %
-% Let us do |\cs_(set/gset/new)(/_protected)(/):N(/p)(n/x)|, $48$
+% Let us do |\cs_(set/gset/new)(/_protected)(/_nopar):N(/p)(n/x)|, $48$
 % assignment functions.  For now, just check that the first argument is
 % a single token, is a function (not yet), and for the |:Nn|/|:Nx|
 % defining functions, check that the signature is right.  Additionally,
@@ -1215,7 +1215,7 @@
               % \check_is_function:N ##1
               \tl_if_empty:nT {##2} { \@@_warning:nn { par-noarg } {##1} }
             }
-          \check_patch:cpnn { cs_ #1 #2 :Np #3 }
+          \check_patch:cpnn { cs_ #1 #2 _nopar:Np #3 }
             ##1 ##2 ## { ##1 ##2 }
             {
               \check_is_N:n {##1}
@@ -1230,7 +1230,7 @@
               \check_signature_is_base:N ##1
               \check_signature_should_be_nonempty:N ##1
             }
-          \check_patch:cpnn { cs_ #1 #2 :N #3 }
+          \check_patch:cpnn { cs_ #1 #2 _nopar:N #3 }
             ##1 ##2 ## { ##1 ##2 }
             {
               \check_is_N:n {##1}
@@ -1368,18 +1368,18 @@
 %
 % When outputting a message, a function definition is made using
 % begin-group and end-group tokens which are spaces (character code
-% $32$), and that confuses the new \cs{cs_set_protected:Npn}.  To
+% $32$), and that confuses the new \cs{cs_set_protected_nopar:Npn}.  To
 % avoid this, go back temporarily to the old definition of that
 % function.
 %    \begin{macrocode}
-    \cs_new_eq:NN \@@_new_cs_set_protected:Npn \cs_set_protected:Npn
+    \cs_new_eq:NN \@@_new_cs_set_protected_nopar:Npn \cs_set_protected_nopar:Npn
     \use:x
       {
         \exp_not:n { \cs_gset_protected:Npn \__msg_interrupt_text:n #1 }
           {
-            \exp_not:n { \cs_set_eq:NN \cs_set_protected:Npn \@@_old_cs_set_protected:Npn }
+            \exp_not:n { \cs_set_eq:NN \cs_set_protected_nopar:Npn \@@_old_cs_set_protected_nopar:Npn }
             \exp_not:o { \__msg_interrupt_text:n {#1} }
-            \exp_not:n { \cs_set_eq:NN \cs_set_protected:Npn \@@_new_cs_set_protected:Npn }
+            \exp_not:n { \cs_set_eq:NN \cs_set_protected_nopar:Npn \@@_new_cs_set_protected_nopar:Npn }
           }
       }
 %    \end{macrocode}
@@ -1421,12 +1421,12 @@
 %     \cs_set_eq:cN, \cs_set_eq:Nc, \cs_set_eq:cc,
 %     \cs_gset_eq:cN, \cs_gset_eq:Nc, \cs_gset_eq:cc,
 %     \cs_new_eq:cN, \cs_new_eq:Nc, \cs_new_eq:cc,
-%     \cs_set:cpn, \cs_set_protected:cpn, \cs_set:cpn, \cs_set_protected:cpn,
-%     \cs_set:cpx, \cs_set_protected:cpx, \cs_set:cpx, \cs_set_protected:cpx,
-%     \cs_gset:cpn, \cs_gset_protected:cpn, \cs_gset:cpn, \cs_gset_protected:cpn,
-%     \cs_gset:cpx, \cs_gset_protected:cpx, \cs_gset:cpx, \cs_gset_protected:cpx,
-%     \cs_new:cpn, \cs_new_protected:cpn, \cs_new:cpn, \cs_new_protected:cpn,
-%     \cs_new:cpx, \cs_new_protected:cpx, \cs_new:cpx, \cs_new_protected:cpx,
+%     \cs_set:cpn, \cs_set_protected:cpn, \cs_set_nopar:cpn, \cs_set_protected_nopar:cpn,
+%     \cs_set:cpx, \cs_set_protected:cpx, \cs_set_nopar:cpx, \cs_set_protected_nopar:cpx,
+%     \cs_gset:cpn, \cs_gset_protected:cpn, \cs_gset_nopar:cpn, \cs_gset_protected_nopar:cpn,
+%     \cs_gset:cpx, \cs_gset_protected:cpx, \cs_gset_nopar:cpx, \cs_gset_protected_nopar:cpx,
+%     \cs_new:cpn, \cs_new_protected:cpn, \cs_new_nopar:cpn, \cs_new_protected_nopar:cpn,
+%     \cs_new:cpx, \cs_new_protected:cpx, \cs_new_nopar:cpx, \cs_new_protected_nopar:cpx,
 %     \tl_new:c, \tl_show:c, \tl_log:c, \tl_clear_new:c, \tl_gclear_new:c, \tl_const:cn, \tl_const:cx,
 %     \clist_new:c, \clist_show:c, \clist_log:c, \clist_clear_new:c, \clist_gclear_new:c, \clist_const:cn,
 %     \seq_new:c, \seq_show:c, \seq_log:c, \seq_clear_new:c, \seq_gclear_new:c,
@@ -1470,7 +1470,7 @@
         }
       \tl_map_inline:nn { {set} {gset} {new} }
         {
-          \tl_map_inline:nn { { } { _protected } {  } { _protected } }
+          \tl_map_inline:nn { { } { _protected } { _nopar } { _protected_nopar } }
             {
               \tl_map_inline:nn { n x }
                 { \check_tmp:w { cs_#1##1 } { p ####1 } }
@@ -2363,9 +2363,9 @@
 %   functions.
 %    \begin{macrocode}
     % \cs_gset_protected:Npn \seq_set_split:Nnn
-    %   { \__seq_set_split:NNnn \cs_set:Npx }
+    %   { \__seq_set_split:NNnn \cs_set_nopar:Npx }
     % \cs_gset_protected:Npn \seq_gset_split:Nnn
-    %   { \__seq_set_split:NNnn \cs_gset:Npx }
+    %   { \__seq_set_split:NNnn \cs_gset_nopar:Npx }
     % \cs_gset_protected:Npn \seq_pop_left:NN
     %   { \__seq_pop:NNNN \__seq_pop_left:NNN \@@_tl_set:Nn }
     % \cs_gset_protected:Npn \seq_gpop_left:NN
