Drop nopar from l3packages
No change to interfaces generated by xparse,
including the 'wrapper' commands ("\foo" which
points to "\foo code", etc.)

--- a/l3packages/l3keys2e/l3keys2e.dtx
+++ b/l3packages/l3keys2e/l3keys2e.dtx
@@ -288,7 +288,7 @@
 %   \LaTeXe{} stores options for each file in a macro which may or may not
 %   exist, hence the need to use \cs{cs_if_exist:c}.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_latexe_options_local:
+\cs_new_protected:Npn \@@_latexe_options_local:
   {
     \cs_if_eq:NNF \@currext \@clsextension
       {
@@ -321,12 +321,12 @@
 %   contrast to other similar packages, the module name is always required
 %   here.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \ProcessKeysOptions #1
+\cs_new_protected:Npn \ProcessKeysOptions #1
   {
     \bool_set_true:N \l_@@_process_class_bool
     \@@_latexe_options:n {#1}
   }
-\cs_new_protected_nopar:Npn \ProcessKeysPackageOptions #1
+\cs_new_protected:Npn \ProcessKeysPackageOptions #1
   {
     \bool_set_false:N \l_@@_process_class_bool
     \@@_latexe_options:n {#1}
