--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -915,12 +915,12 @@
 %   The main functions for creating commands set the appropriate flag then
 %   use the same internal code to do the definition.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_declare_cmd:Nnn
+\cs_new_protected:Npn \@@_declare_cmd:Nnn
   {
     \bool_set_false:N \l_@@_expandable_bool
     \@@_declare_cmd_aux:Nnn
   }
-\cs_new_protected_nopar:Npn \@@_declare_expandable_cmd:Nnn
+\cs_new_protected:Npn \@@_declare_expandable_cmd:Nnn
   {
     \bool_set_true:N \l_@@_expandable_bool
     \@@_declare_cmd_aux:Nnn
@@ -1202,7 +1202,7 @@
     \quark_if_recursion_tail_stop_do:nn {#3} { \@@_bad_arg_spec:wn }
     \@@_count_mandatory:N
   }
-\cs_new_protected_nopar:Npn \@@_count_type_g:w
+\cs_new_protected:Npn \@@_count_type_g:w
   { \@@_count_mandatory:N }
 \cs_new_protected:Npn \@@_count_type_G:w #1
   {
@@ -1221,7 +1221,7 @@
     \quark_if_recursion_tail_stop_do:nn {#2} { \@@_bad_arg_spec:wn }
     \@@_count_mandatory:N
   }
-\cs_new_protected_nopar:Npn \@@_count_type_m:w
+\cs_new_protected:Npn \@@_count_type_m:w
   {
     \int_incr:N \l_@@_mandatory_args_int
     \@@_count_mandatory:N
@@ -1312,7 +1312,7 @@
 %  process so that when actually setting up processors the flag-reset can
 %  be bypassed.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_prepare_signature:N
+\cs_new_protected:Npn \@@_prepare_signature:N
   {
     \bool_set_false:N \l_@@_processor_bool
     \@@_prepare_signature_bypass:N
@@ -1369,7 +1369,7 @@
 %   off the total argument count. The \texttt{m} arguments are recorded here as
 %   this has to be done for every case where there is then a long argument.
 %    \begin{macrocode}
-\cs_new_protected_nopar:cpn { @@_add_type_+:w }
+\cs_new_protected:cpn { @@_add_type_+:w }
   {
     \@@_flush_m_args:
     \bool_set_true:N \l_@@_long_bool
@@ -1419,7 +1419,7 @@
 %   The \texttt{g} type is simply an alias for \texttt{G} with the correct
 %   default built-in.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_add_type_g:w
+\cs_new_protected:Npn \@@_add_type_g:w
   { \exp_args:No \@@_add_type_G:w \c_@@_no_value_tl }
 %    \end{macrocode}
 % \end{macro}
@@ -1458,7 +1458,7 @@
 %   Finding \texttt{l} arguments is very simple: there is nothing to do
 %   other than add the grabber.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_add_type_l:w
+\cs_new_protected:Npn \@@_add_type_l:w
   {
     \@@_flush_m_args:
     \@@_add_grabber_mandatory:N l
@@ -1475,7 +1475,7 @@
 %   argument is required it is simply counted at this stage, to be
 %   added later using \cs{@@_flush_m_args:}.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_add_type_m:w
+\cs_new_protected:Npn \@@_add_type_m:w
   {
     \bool_if:nTF { \l_@@_long_bool || \l_@@_processor_bool }
       {
@@ -1535,7 +1535,7 @@
 % \begin{macro}{\@@_add_type_v:w}
 %   At this stage, the \texttt{v} argument is identical to \texttt{l}.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_add_type_v:w
+\cs_new_protected:Npn \@@_add_type_v:w
   {
     \@@_flush_m_args:
     \@@_add_grabber_mandatory:N v
@@ -1552,7 +1552,7 @@
 %   remain to be added to
 %   the signature is also decreased by the appropriate amount.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_flush_m_args:
+\cs_new_protected:Npn \@@_flush_m_args:
   {
     \int_compare:nNnT \l_@@_m_args_int > \c_zero
       {
@@ -1574,7 +1574,7 @@
 %   This is used to determine whether to skip spaces or not where
 %   searching for the argument.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_add_grabber_mandatory:N #1
+\cs_new_protected:Npn \@@_add_grabber_mandatory:N #1
   {
     \tl_put_right:Nx \l_@@_signature_tl
       {
@@ -1584,7 +1584,7 @@
     \bool_set_false:N \l_@@_long_bool
     \int_decr:N \l_@@_mandatory_args_int
   }
-\cs_new_protected_nopar:Npn \@@_add_grabber_optional:N #1
+\cs_new_protected:Npn \@@_add_grabber_optional:N #1
   {
     \tl_put_right:Nx \l_@@_signature_tl
       {
@@ -1613,7 +1613,7 @@
 % \begin{macro}{\@@_add_expandable_type_+:w}
 %   Check that a plus is given only if it occurs for every argument.
 %    \begin{macrocode}
-\cs_new_protected_nopar:cpn { @@_add_expandable_type_+:w }
+\cs_new_protected:cpn { @@_add_expandable_type_+:w }
   {
     \bool_set_true:N \l_@@_long_bool
     \int_compare:nNnTF \l_@@_current_arg_int = \c_one
@@ -1712,13 +1712,13 @@
 % \begin{macro}{\@@_add_expandable_type_G:w}
 %   These are not allowed at all, so there is a complaint and a fall-back.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_add_expandable_type_g:w
+\cs_new_protected:Npn \@@_add_expandable_type_g:w
   {
     \__msg_kernel_error:nnx { xparse } { invalid-expandable-argument-type }
       { g }
     \@@_add_expandable_type_m:w
   }
-\cs_new_protected_nopar:Npn \@@_add_expandable_type_G:w #1
+\cs_new_protected:Npn \@@_add_expandable_type_G:w #1
   {
     \__msg_kernel_error:nnx { xparse } { invalid-expandable-argument-type }
       { G }
@@ -1731,12 +1731,12 @@
 % \begin{macro}{\@@_add_expandable_type_k:w}
 % \begin{macro}{\@@_add_expandable_type_K:w}
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_add_expandable_type_k:w #1
+\cs_new_protected:Npn \@@_add_expandable_type_k:w #1
   {
     \exp_args:NNo
       \@@_add_expandable_type_K:w #1 \c_@@_no_value_tl
   }
-\cs_new_protected_nopar:Npn \@@_add_expandable_type_K:w #1#2
+\cs_new_protected:Npn \@@_add_expandable_type_K:w #1#2
   {
     \@@_add_expandable_grabber_optional:n { K }
     \bool_if:NTF \l_@@_all_long_bool
@@ -1760,7 +1760,7 @@
 %   Invalid in expandable contexts (as the next left brace may have been
 %   inserted by \pkg{xparse} due to a failed search for an optional argument).
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_add_expandable_type_l:w
+\cs_new_protected:Npn \@@_add_expandable_type_l:w
   {
     \__msg_kernel_error:nnx { xparse } { invalid-expandable-argument-type }
       { l }
@@ -1775,7 +1775,7 @@
 %   arguments. To deal with the latter case, the value of
 %   \cs{l_@@_m_args_int} needs to be increased appropriately.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_add_expandable_type_m:w
+\cs_new_protected:Npn \@@_add_expandable_type_m:w
   {
     \int_incr:N \l_@@_m_args_int
     \@@_add_expandable_grabber_mandatory:n { m }
@@ -1813,7 +1813,7 @@
 %
 % \begin{macro}{\@@_add_expandable_type_t:w}
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_add_expandable_type_t:w #1
+\cs_new_protected:Npn \@@_add_expandable_type_t:w #1
   {
     \@@_add_expandable_grabber_optional:n { t }
     \bool_if:NTF \l_@@_all_long_bool
@@ -1835,7 +1835,7 @@
 %   Invalid in an expandable context as any preceding optional argument may
 %   wrap part of the delimiter up in braces.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_add_expandable_type_u:w #1
+\cs_new_protected:Npn \@@_add_expandable_type_u:w #1
   {
     \__msg_kernel_error:nnx { xparse } { invalid-expandable-argument-type }
       { u }
@@ -1847,7 +1847,7 @@
 % \begin{macro}{\@@_add_expandable_type_v:w}
 %   Another forbidden type.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_add_expandable_type_v:w
+\cs_new_protected:Npn \@@_add_expandable_type_v:w
   {
     \__msg_kernel_error:nnx { xparse } { invalid-expandable-argument-type }
       { v }
@@ -1867,7 +1867,7 @@
 %   is also a good place to check on the consistency of the long status of
 %   arguments.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_add_expandable_grabber_mandatory:n #1
+\cs_new_protected:Npn \@@_add_expandable_grabber_mandatory:n #1
   {
     \@@_add_expandable_long_check:
     \tl_put_right:Nx \l_@@_signature_tl
@@ -1875,7 +1875,7 @@
     \bool_set_false:N \l_@@_long_bool
     \int_decr:N \l_@@_mandatory_args_int
   }
-\cs_new_protected_nopar:Npn \@@_add_expandable_grabber_optional:n #1
+\cs_new_protected:Npn \@@_add_expandable_grabber_optional:n #1
   {
     \@@_add_expandable_long_check:
     \int_compare:nNnF \l_@@_mandatory_args_int > \c_zero
@@ -1884,7 +1884,7 @@
       { \exp_not:c { @@_expandable_grab_ #1 :w } }
     \bool_set_false:N \l_@@_long_bool
   }
-\cs_new_protected_nopar:Npn \@@_add_expandable_long_check:
+\cs_new_protected:Npn \@@_add_expandable_long_check:
   {
     \bool_if:nT { \l_@@_all_long_bool && ! \l_@@_long_bool }
       { \__msg_kernel_error:nn { xparse } { inconsistent-long } }
@@ -2453,12 +2453,12 @@
 %    \begin{macrocode}
 \tl_new:N \l_@@_v_rest_of_signature_tl
 \tl_new:N \l_@@_v_arg_tl
-\cs_new_protected_nopar:Npn \@@_grab_v:w
+\cs_new_protected:Npn \@@_grab_v:w
   {
     \bool_set_false:N \l_@@_long_bool
     \@@_grab_v_aux:w
   }
-\cs_new_protected_nopar:Npn \@@_grab_v_long:w
+\cs_new_protected:Npn \@@_grab_v_long:w
   {
     \bool_set_true:N \l_@@_long_bool
     \@@_grab_v_aux:w
@@ -2481,7 +2481,7 @@
               { \@@_grab_v_aux_abort:n { } }
           }
   }
-\cs_new_protected_nopar:Npn \@@_grab_v_group_end:
+\cs_new_protected:Npn \@@_grab_v_group_end:
   {
         \group_align_safe_end:
         \exp_args:NNNo
@@ -2550,7 +2550,7 @@
       }
       { \@@_grab_v_aux_abort:n {#2} #2 }
   }
-\cs_new_protected_nopar:Npn \@@_grab_v_aux_loop_end:
+\cs_new_protected:Npn \@@_grab_v_aux_loop_end:
   {
     \@@_grab_v_group_end:
     \exp_args:Nx \@@_add_arg:n { \tl_tail:N \l_@@_v_arg_tl }
@@ -2577,7 +2577,7 @@
 %   normal undelimited argument.
 %    \begin{macrocode}
 \int_new:N \l_@@_v_nesting_int
-\cs_new_protected_nopar:Npx \@@_grab_v_bgroup:
+\cs_new_protected:Npx \@@_grab_v_bgroup:
   {
     \exp_not:N \@@_grab_v_aux_catcodes:
     \exp_not:n { \int_set_eq:NN \l_@@_v_nesting_int \c_one }
@@ -2629,7 +2629,7 @@
 %   rest of the code. Then the error branch can check what caused the
 %   bail out and give the appropriate error message.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_grab_v_aux_catcodes:
+\cs_new_protected:Npn \@@_grab_v_aux_catcodes:
   {
 %<*initex>
     \seq_map_function:NN
@@ -3649,8 +3649,8 @@
 % \begin{macro}[TF]{\IfValue}
 %   Inverted logic.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \IfValueF { \@@_if_no_value:nT }
-\cs_new_nopar:Npn \IfValueT { \@@_if_no_value:nF }
+\cs_new:Npn \IfValueF { \@@_if_no_value:nT }
+\cs_new:Npn \IfValueT { \@@_if_no_value:nF }
 \cs_new:Npn \IfValueTF #1#2#3 { \@@_if_no_value:nTF {#1} {#3} {#2} }
 %    \end{macrocode}
 % \end{macro}
